--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "scaffold-eth-2"]
 	path = scaffold-eth-2
 	url = https://github.com/scaffold-eth/scaffold-eth-2.git
+[submodule "lottery-frontend"]
+	path = lottery-frontend
+	url = git@github.com:/lottery-frontend
